--- a/kelas-5/lembah/lembah.html
+++ b/kelas-5/lembah/lembah.html
@@ -150,6 +150,7 @@
    <a href="AKM/AKM.html" class="map-item" style="display: inline-block; text-align: center;">
   <img src="https://i.imgur.com/oDj5njL.png" alt="ANBK" style="width:50px; height:50px; display:block; margin:0 auto;">
   <div>ANBK</div>
+     <a href="perkalian.html" class="map-item"><span class="emoji">🕹️</span>Perkalian</a>
   </div>
   
   <!-- Suara klik interaktif -->
