--- a/kelas-5/lembah/lembah.html
+++ b/kelas-5/lembah/lembah.html
@@ -146,6 +146,10 @@
     <a href="#perjalanan-rumus" class="map-item"><span class="emoji">📊</span>Jelajah Warna-Warni Data</a>
     <a href="#alam-bentuk" class="map-item"><span class="emoji">🌈</span>Dunia Sudut Ajaib</a>
     <a href="#kerja-sama" class="map-item"><span class="emoji">🔍</span>Detektif Bangun Datar</a>
+    <a href="#AKM/AKM.html" class="map-item" aria-label="Masuk ke menu ANBK">
+  <img src="https://i.imgur.com/oDj5njL.png" alt="Ikon ANBK" class="icon"
+       onerror="this.replaceWith(Object.assign(document.createElement('span'),{textContent:'🖥️'}));">
+  <span class="label">ANBK</span>
   </div>
   
   <!-- Suara klik interaktif -->
