--- a/kelas-5/lembah/AKM/AKM.html
+++ b/kelas-5/lembah/AKM/AKM.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html lang="id">
 <head>
 <meta charset="UTF-8" />
@@ -76,8 +76,8 @@ h1 img {
     <!-- Dropdown Pilihan Latihan -->
     <select id="menuLatihan" onchange="pilihLatihan()">
         <option value="">-- Pilih Opsi --</option>
-        <option value="AKM/numerasi.html">numerasi</option>
-        <option value="AKM/literasi.html">literasi</option>
+        <option value="numerasi/numerasi.html">numerasi</option>
+        <option value="literasi/literasi.html">literasi</option>
     </select>
 </div>
 
@@ -92,6 +92,7 @@ function pilihLatihan() {
 </script>
 </body>
 </html>
+
 
 
 
