--- a/kelas-5/lembah/AKM/literasi/soal1.html
+++ b/kelas-5/lembah/AKM/literasi/soal1.html
@@ -208,7 +208,7 @@
 </div>
 
 <div class="footer-img">
-  <img src="https://i.imgur.com/9LYqA8G.png" alt="Gambar tambahan">
+  <img src="https://i.imgur.com/z8gQ9GU.png" alt="Gambar tambahan">
 </div>
 
 <!-- Tombol ke atas -->
