--- a/kelas-5/lembah/AKM/literasi/soal2.html
+++ b/kelas-5/lembah/AKM/literasi/soal2.html
@@ -77,9 +77,9 @@
 <body>
 
   <div class="judul">
-    <button class="kembali" onclick="window.location.href='AKM.html'">Kembali</button>
+    <button class="kembali" onclick="window.location.href='literasi.html'">Kembali</button>
     Latihan Soal ANBK
-    <button class="lanjut" onclick="window.location.href='AKM.html'">Lanjut</button>
+    <button class="lanjut" onclick="window.location.href='literasi.html'">Lanjut</button>
   </div>
 
   <div class="soal-box">
